Add weldx file wrapper (#341)
The weldx file wrapper has the following features:

- Dictionary interface.
- Provides an optional interface to access the dictionary via attributes.
- Handle file objects internally, e.g. create buffers automatically.
- Context manager interface, synchronizing file contents.
- Expose only the most mandatory ASDF interfaces to users.
- Easy visualization of the Asdf header.
- History entries with custom software entries.


Co-authored-by: vhirtham <volker.hirthammer@gmail.com>

--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -189,9 +189,10 @@
    "source": [
     "## using ASDF\n",
     "\n",
-    "All groove types can be save to _ASDF_-files with the included schemas and _ASDF_-extension from the weldx-package.\n",
-    "\n",
-    "Writing the asdf file into a buffer:"
+    "All groove types can be saved to _ASDF_-files with the included schemas and _ASDF_-extension from the weldx-package.\n",
+    "Note that these schemas and extensions are being handled automatically and you do not have\n",
+    "to worry about these.\n",
+    "Here we demonstrate the writing of the groove data into a buffer (in-memory file):"
    ]
   },
   {
@@ -201,7 +202,7 @@
    "outputs": [],
    "source": [
     "tree = dict(test_v_groove=v_groove)\n",
-    "buffer = weldx.asdf.util._write_buffer(tree)"
+    "file = weldx.WeldxFile(tree=tree)"
    ]
   },
   {
@@ -217,14 +218,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weldx.asdf.util.notebook_fileprinter(buffer)"
+    "file.show_asdf_header()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reading the file contents again and validating the extracted groove:"
+    "Now we are taking a copy of the first file by calling `WeldxFile.write_to`.\n",
+    "Then we read the file contents again and validating the extracted groove:"
    ]
   },
   {
@@ -233,7 +235,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = weldx.asdf.util._read_buffer(buffer)\n",
+    "file_copy = file.write_to()\n",
+    "data = weldx.WeldxFile(file_copy)\n",
     "data[\"test_v_groove\"]"
    ]
   },
@@ -249,7 +252,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# generate test grooves\n",
@@ -262,13 +269,6 @@
     "for k, v in groove_dict.items():\n",
     "    v[0].plot(line_style=\"-\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
