--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -460,25 +460,20 @@
     "    # \"data_sources\": sources,\n",
     "    # \"data_processors\": processors,\n",
     "}\n",
-    "buffer = weldx.asdf.util._write_buffer(tree)"
+    "file = weldx.WeldxFile(tree=tree)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "weldx.asdf.util.notebook_fileprinter(buffer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = weldx.asdf.util._read_buffer(buffer)"
+    "file.show_asdf_header()"
    ]
   }
  ],
