--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -544,7 +544,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## using ASDF"
+    "## using ASDF\n",
+    "Now we write all of our structured data to an ASDF file and have a look at the ASDF header."
    ]
   },
   {
@@ -562,7 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buffer = weldx.asdf.util._write_buffer(tree)"
+    "file = weldx.WeldxFile(tree=tree)"
    ]
   },
   {
@@ -571,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weldx.asdf.util.notebook_fileprinter(buffer)"
+    "file.show_asdf_header()"
    ]
   }
  ],
