--- a/tutorials/GMAW_process.ipynb
+++ b/tutorials/GMAW_process.ipynb
@@ -20,10 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import asdf\n",
     "import weldx\n",
     "from weldx import Q_\n",
-    "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension\n",
     "from weldx.core import TimeSeries as TS\n",
     "from weldx.welding.processes import GmawProcess"
    ]
@@ -118,7 +116,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## using ASDF"
+    "## using ASDF\n",
+    "We write the dictionary containing our structured data to an ASDF file using the WeldxFile\n",
+    "class. We pass the tree as a named keyword argument.\n",
+    "The tree will be serialized to ASDF in memory, and we can have a look at the ASDF header."
    ]
   },
   {
@@ -136,17 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "buffer = weldx.asdf.util._write_buffer(tree)\n",
-    "weldx.asdf.util.notebook_fileprinter(buffer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = weldx.asdf.util._read_buffer(buffer)"
+    "file = weldx.WeldxFile(tree=tree)\n",
+    "file.show_asdf_header()"
    ]
   },
   {
