--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "As you can see, we have created a `MeasurementChain` with the name \"Temperature measurement chain 1\". It's source is named \"Thermocouple 1\" and it produces an analog output signal in Volts. The specified measurement error is a fixed value of 0.1%. \n",
     "\n",
-    "Next we want to add the first transformation step, the analog-digital conversion of the signal. Therefore, we use the `create_transformation` method of our newly created measurement chain. As the `from_parameters` function, it accepts the name of the transformation, its error, the output signal and the output unit as parameters. Additionally, we can provide a function that describes how the numerical values and units are transformed.\n",
+    "Next we want to add the first transformation step, the analog-digital conversion of the signal. Therefore, we use the `create_transformation` method of our newly created measurement chain. As the `from_parameters` function, it accepts the name of the transformation, its error, the output signal, and the output unit as parameters. Additionally, we can provide a function that describes how the numerical values and units are transformed.\n",
     "\n",
     "The output signal type, unit and function are all optional parameters. However, providing none of them wouldn't apply any changes to the signal and emit a warning.\n",
     "\n",
@@ -119,7 +119,16 @@
     "3K \\cdot x + 273.15K\n",
     "$$\n",
     "\n",
-    "The name of the variable and the parameters can be arbitrarily chosen. The only restriction is, that the function only has a single variable which represents the input signal. Since the parameters of our function already contain the unit conversion we do not need to provide the `output_signal_unit` parameter. However, we could do this to assure that our output signal has the correct dimensionality. In case the function yields a unit of different dimensionality than passed `output_signal_unit`, an exception would be raised. Be aware, that degrees in Celsius have the same dimensionality (temperature) as Kelvin. So in this case, `create_transformation` wouldn't complain. Additionally, you can't use the `output_signal_unit` parameter to add a unit conversion if the passed function does not contain one. In fact, if only `output_signal_unit` is provided without a function, like in the AD conversion we added before, `create_transformation` generates a corresponding conversion function internally.\n",
+    "The name of the variable and the parameters can be arbitrarily chosen. The only restriction is, that the function only has a single variable which represents the input signal. In this example our input variable is given by `x`.\n",
+    "\n",
+    "Since the parameters of our function already contain the unit conversion we do not need to provide the `output_signal_unit` parameter. \n",
+    "However, we could do this to assure that the functions' output signal has the correct dimensionality, for example length, time, or temperature.\n",
+    "To do so, we can provide an arbitrary unit of the desired dimension.\n",
+    "If we would pass `m`, we expect the output signal to represent a length.\n",
+    "In case the function yields inches, millimeters, yards etc. this would be the correct dimensionality.\n",
+    "Squaremeters, seconds, or volts would raise an exception.\n",
+    "\n",
+    "Additionally, you can't use the `output_signal_unit` parameter to add a unit conversion if the passed function does not contain one. In fact, if only `output_signal_unit` is provided without a function, like in the AD conversion we added before, `create_transformation` generates a corresponding conversion function internally.\n",
     "\n",
     "## Plotting measurement chains\n",
     "\n",
