--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -237,7 +237,7 @@
     "## Construction from equipment classes\n",
     "\n",
     "The sources and transformations of a measurement chain are often tied to a certain piece of laboratory equipment. \n",
-    "The weldx package offers the `GenericEquipment` structure to describe your equipment and collect all the operations it performs inside of a measurement chain.\n",
+    "The weldx package offers the `MeasurementEquipment` structure to describe your equipment and collect all the operations it performs inside of a measurement chain.\n",
     "Since lab equipment usually doesn't change frequently, a good approach would be to define all your instruments once and reuse their definitions when creating a new WelDX file.\n",
     "The `MeasurementChain` supports this by letting you create a new instances using `from_equipment` and adding transformations with `add_transformation_from_equipment`.\n",
     "\n",
