--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -81,13 +81,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> todo: rewrite after discussing this with the group\n",
-    "\n",
     "It is important to note the type and structure of the `current_data` and `voltage_data` datasets:\n",
     "\n",
-    "- they are created as `xarray.DataArrays`\n",
+    "- they are created as `TimeSeries`\n",
     "- the data itself is a `pint.Quantity` i.e. a numpy array with associated unit. For the current measurement this is `ampere`, the voltage is given in `volt`. Using quantities is an important core concept of measurements !\n",
-    "- each `DataArray` has a `time` dimension and coordinate using numpy datetime formats."
+    "- each `TimeSeries` has a `time` dimension and coordinate using numpy datetime formats."
    ]
   },
   {
@@ -95,7 +93,9 @@
    "metadata": {},
    "source": [
     "## Equipment and Software\n",
-    "Next, let's define some of the equipment and software that is used throughout the measurement chain. We will use and add more information to these objects later.\n",
+    "Next, let's define some of the equipment and software that is used throughout the measurement chain. \n",
+    "\n",
+    ">We will use and add more information to these objects later.\n",
     "\n",
     "In out example, two types of hardware equipment are used:\n",
     "\n",
@@ -134,9 +134,13 @@
     "## Defining a measurement chain: current measurement\n",
     "Now we define the missing elements of our measurement chain and bundle everything together. A core concept of the chain are `signals` that go in and out of `transformations` which define mathematical operations of the signals, forming the chain.\n",
     "\n",
-    "Each measurement chain starts with a source signal. This is the point where our physical process or quantity is initially detected by a sensor. Since every `MeasurementChain` needs at least a source, we need to provide the corresponding information when creating an instance of this class. The parameters are the `source_name`, the `output_signal_type` and `output_signal_unit` as well as the `source_error` representing the uncertainty attached to the signal source. \n",
+    "Each measurement chain starts with a source signal. This is the point where our physical process or quantity is initially detected by a sensor. Since every `MeasurementChain` needs at least a source, we need to provide the corresponding information when creating an instance of this class. \n",
+    "As shown in the tutorial about the `MeasurementChain`, there are several ways to do this.\n",
+    "Because we have already defined our source equipment, we will add the `SignalSource` to the `MeasurementEquipment` and use it to create our `MeasurementChain`. \n",
+    "The necessary parameters to create the `SignalSource` are its `name`, the `output_signal` and the `source_error` representing the uncertainty attached to the signal source. \n",
     "\n",
-    "For our current measurement, the source outputs an **analog Signal** of unit **V**. Since there is no recording of this measurement we do not provide the data. According to the spec sheet of the sensor the measurement error in this initial step is **0.1 %** which can be documented using the `Error` property (again using quantities)."
+    "For our current measurement, the source outputs an **analog Signal** of unit **V**. \n",
+    "According to the spec sheet of the sensor the measurement error in this initial step is **0.1 %** which can be documented using the `Error` property (again using quantities)."
    ]
   },
   {
@@ -145,20 +149,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "welding_current_chain = msm.MeasurementChain.from_parameters(\n",
-    "    name=\"welding current measurement chain\",\n",
-    "    source_name=\"Current Sensor\",\n",
-    "    output_signal_type=\"analog\", \n",
-    "    output_signal_unit=\"V\",\n",
-    "    source_error=msm.Error(Q_(0.1, \"percent\")),\n",
-    ")"
+    "current_source = msm.SignalSource(name=\"Current sensor\",\n",
+    "                                  error=msm.Error(Q_(0.1, \"percent\")), \n",
+    "                                  output_signal=msm.Signal(signal_type=\"analog\", unit=\"V\"))\n",
+    "\n",
+    "HKS_sensor.sources.append(current_source)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We associate the current measurement source with the HKS sensor by adding it to its list of sources. We now have the start of our measurement chain defined."
+    "Now we can create the current measurement chain. Since there is no recording of this measurement we do not provide any data. "
    ]
   },
   {
@@ -167,8 +169,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#HKS_sensor.sources = []\n",
-    "#HKS_sensor.sources.append(src_current)"
+    "welding_current_chain = msm.MeasurementChain.from_equipment(\n",
+    "    name=\"welding current measurement chain\",\n",
+    "    equipment=HKS_sensor,\n",
+    ")"
    ]
   },
   {
@@ -180,7 +184,7 @@
     "a * x + b\n",
     "32768 / (10 V) * x  + 0\n",
     "```\n",
-    "We express this signal transformation as an analytical formula created with the `sympy` package. Based on the above formula we also define the static parameters `a` and `b` in the `MathematicalExpression`. Note that we use quantities here as well !\n",
+    "We express this signal transformation as an analytical formula. Based on the above formula we also define the static parameters `a` and `b` in the `MathematicalExpression`. Note that we use quantities here as well !\n",
     "Since our result is a dimensionless integer `a` has the unit **1/V** and `b` is dimensionless which we indicate with `\"\"`."
    ]
   },
@@ -192,18 +196,20 @@
    "source": [
     "from weldx.asdf.tags.weldx.core.mathematical_expression import MathematicalExpression\n",
     "\n",
-    "[a, x, b] = sympy.symbols(\"a x b\")\n",
-    "current_AD_func = MathematicalExpression(a * x + b)\n",
-    "current_AD_func.set_parameter(\"a\", Q_(32768.0 / 10.0, \"1/V\"))\n",
-    "current_AD_func.set_parameter(\"b\", Q_(0.0, \"\"))"
+    "current_AD_func = MathematicalExpression(\n",
+    "    expression=\"a * x + b\", \n",
+    "    parameters= dict(a=Q_(32768.0 / 10.0, \"1/V\"),\n",
+    "                     b=Q_(0.0, \"\"))\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have the transform function we can define our `DataTransformation`. The `input_signal` of our transformation is the `src_current.output_signal` object from our source signal defined earlier.\n",
-    "Our new Transformation outputs a new **dimensionless** signal of type **digital**. Once again, since we have no data record of this we do not assign any data object to the signal. The Beckhoff AD converter lists the measurement Error at **0.01 %**."
+    "Now that we have the transform function we can define our `SignalTransformation`.\n",
+    "Our new Transformation outputs a new **dimensionless** signal of type **digital**.\n",
+    "The Beckhoff AD converter lists the measurement Error at **0.01 %**."
    ]
   },
   {
@@ -212,27 +218,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#current_AD_transform = msm.DataTransformation(\n",
-    "#    name=\"AD conversion current measurement\",\n",
-    "#    input_signal=src_current.output_signal,\n",
-    "#    output_signal=msm.Signal(\"digital\", \"\", data=None),\n",
-    "#    error=msm.Error(Q_(0.01, \"percent\")),\n",
-    "#    func=current_AD_func,\n",
-    "#)\n",
-    "welding_current_chain.create_transformation(\n",
+    "current_AD_transform = msm.SignalTransformation(\n",
     "    name=\"AD conversion current measurement\",\n",
-    "    output_signal_type=\"digital\",\n",
-    "    output_signal_unit=\"\",\n",
+    "    func=current_AD_func,\n",
+    "    type_transformation=\"AD\",\n",
     "    error=msm.Error(Q_(0.01, \"percent\")),\n",
-    "    func=current_AD_func                \n",
-    ")\n"
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also associate the transformation to the Beckhoff equipment:"
+    "We add the transformation to our `MeasurementEquipment` representing the Beckhoff AD converter."
    ]
   },
   {
@@ -241,8 +239,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# BH_ELM.data_transformations = []\n",
-    "# BH_ELM.data_transformations.append(current_AD_transform)"
+    "BH_ELM.transformations.append(current_AD_transform)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we use the equipment to add the transformation to the measurement chain."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "welding_current_chain.add_transformation_from_equipment(BH_ELM)"
    ]
   },
   {
@@ -263,9 +276,11 @@
    "outputs": [],
    "source": [
     "# define current output calibration expression and transformation\n",
-    "current_calib_func = MathematicalExpression(a * x + b)\n",
-    "current_calib_func.set_parameter(\"a\", Q_(1000.0 / 32768.0, \"A\"))\n",
-    "current_calib_func.set_parameter(\"b\", Q_(0.0, \"A\"))"
+    "current_calib_func = MathematicalExpression(\n",
+    "    \"a * x + b\",\n",
+    "    parameters=dict(a= Q_(1000.0 / 32768.0, \"A\"),\n",
+    "                    b= Q_(0.0, \"A\"))\n",
+    ")"
    ]
   },
   {
@@ -274,10 +289,9 @@
    "source": [
     "We create the final transformation step:\n",
     "\n",
-    "- the input signal now is the output signal of the previous AD conversion\n",
     "- the output signal is our final current measurement representation\n",
     "- we add the our measurement data to this signal !\n",
-    "- we add the software as a meta field to the signal transformation"
+    "- we add the software as a meta field to the signal transformation, since the `Software` class currently does not provide the option to store transformations and therefore can't be linked automatically by the `MeasurementChain`"
    ]
   },
   {
@@ -286,26 +300,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#current_calib_transform = msm.DataTransformation(\n",
-    "#    name=\"Calibration current measurement\",\n",
-    "#    input_signal=current_AD_transform.output_signal,\n",
-    "#    output_signal=msm.Signal(\"digital\", \"A\", data=current_data),\n",
-    "#    error=msm.Error(0.0),\n",
-    "#    func=current_calib_func,\n",
-    "#    meta=twincat_scope,\n",
-    "#)\n",
-    "\n",
-    "# todo:\n",
-    "# - add signal data parameter?\n",
-    "# - add meta data\n",
-    "welding_current_chain.create_transformation(\n",
-    "    name=\"Calibration current measurement\",\n",
-    "    output_signal_type=\"digital\",\n",
-    "    output_signal_unit=\"A\",\n",
-    "    error=msm.Error(0.0),\n",
-    "    func=current_calib_func\n",
+    "current_calib_transform = msm.SignalTransformation(\n",
+    "     name=\"Calibration current measurement\",\n",
+    "     error=msm.Error(0.0),\n",
+    "     func=current_calib_func,\n",
+    "     meta=twincat_scope,\n",
     ")\n",
-    "welding_current_chain.add_signal_data(current_data)"
+    "\n",
+    "welding_current_chain.add_transformation(\n",
+    "    transformation=current_calib_transform,\n",
+    "    data=current_data\n",
+    ")"
    ]
   },
   {
@@ -358,69 +363,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "welding_voltage_chain = msm.MeasurementChain.from_parameters(\n",
+    "voltage_source = msm.SignalSource(name=\"Voltage sensor\",\n",
+    "                                  error=msm.Error(Q_(0.1, \"percent\")), \n",
+    "                                  output_signal=msm.Signal(signal_type=\"analog\", unit=\"V\"))\n",
+    "\n",
+    "HKS_sensor.sources.append(voltage_source)\n",
+    "\n",
+    "welding_voltage_chain = msm.MeasurementChain.from_equipment(\n",
     "    name=\"welding voltage measurement\",\n",
-    "    source_name=\"Voltage Sensor\",\n",
-    "    output_signal_type=\"analog\",\n",
-    "    output_signal_unit=\"V\",\n",
-    "    source_error=msm.Error(Q_(0.1, \"percent\"))\n",
+    "    equipment=HKS_sensor,\n",
+    "    source_name=\"Voltage sensor\"\n",
     ") \n",
     "\n",
-    "#HKS_sensor.sources.append(src_voltage)\n",
     "\n",
-    "# define AD conversion expression and transformation step\n",
-    "[a, x, b] = sympy.symbols(\"a x b\")\n",
-    "voltage_ad_func = MathematicalExpression(a * x + b)\n",
-    "voltage_ad_func.set_parameter(\"a\", Q_(32768.0 / 10.0, \"1/V\"))\n",
-    "voltage_ad_func.set_parameter(\"b\", Q_(0.0, \"\"))\n",
-    "\n",
-    "#voltage_AD_transform = msm.DataTransformation(\n",
-    "#    name=\"AD conversion voltage measurement\",\n",
-    "#    input_signal=src_voltage.output_signal,\n",
-    "#    output_signal=msm.Signal(\"digital\", \"\", data=None),\n",
-    "#    error=msm.Error(Q_(0.01, \"percent\")),\n",
-    "#    func=voltage_ad_func,\n",
-    "#)\n",
-    "\n",
-    "welding_voltage_chain.create_transformation(\n",
-    "    name=\"AD conversion voltage measurement\",\n",
-    "    output_signal_type=\"digital\",\n",
-    "    output_signal_unit=\"\",\n",
-    "    error=msm.Error(Q_(0.01, \"percent\")),\n",
-    "    func=voltage_ad_func\n",
+    "voltage_ad_func = MathematicalExpression(\n",
+    "    \"a * x + b\",\n",
+    "    parameters=dict(a = Q_(32768.0 / 10.0, \"1/V\"),\n",
+    "                    b = Q_(0.0, \"\"))\n",
     ")\n",
     "\n",
-    "#HKS_sensor.data_transformations.append(voltage_AD_transform)\n",
+    "voltage_AD_transform = msm.SignalTransformation(\n",
+    "     name=\"AD conversion voltage measurement\",\n",
+    "     error=msm.Error(Q_(0.01, \"percent\")),\n",
+    "     func=voltage_ad_func,\n",
+    "     type_transformation=\"AD\",\n",
+    ")\n",
+    "\n",
+    "BH_ELM.transformations.append(voltage_AD_transform)\n",
+    "\n",
+    "welding_voltage_chain.add_transformation_from_equipment(\n",
+    "    equipment=BH_ELM,\n",
+    "    transformation_name=\"AD conversion voltage measurement\"\n",
+    ")\n",
+    "\n",
     "\n",
     "# define voltage output calibration expression and transformation\n",
-    "voltage_calib_func = MathematicalExpression(a * x + b)\n",
-    "voltage_calib_func.set_parameter(\"a\", Q_(100.0 / 32768.0, \"V\"))\n",
-    "voltage_calib_func.set_parameter(\"b\", Q_(0.0, \"V\"))\n",
-    "\n",
-    "#voltage_calib_transform = msm.DataTransformation(\n",
-    "#    name=\"Calibration voltage measurement\",\n",
-    "#    input_signal=voltage_AD_transform.output_signal,\n",
-    "#    output_signal=msm.Signal(\"digital\", \"V\", data=voltage_data),\n",
-    "#    error=msm.Error(0.0),\n",
-    "#    func=voltage_calib_func,\n",
-    "#    meta=twincat_scope,\n",
-    "#)\n",
-    "\n",
-    "# todo: add meta\n",
-    "welding_voltage_chain.create_transformation(\n",
-    "    name=\"Calibration voltage measurement\",\n",
-    "    output_signal_type=\"digital\",\n",
-    "    output_signal_unit=\"V\",\n",
-    "    error=msm.Error(0.0),\n",
-    "    func=voltage_calib_func\n",
+    "voltage_calib_func = MathematicalExpression(\n",
+    "    expression=\"a * x + b\",\n",
+    "    parameters=dict(a = Q_(100.0 / 32768.0, \"V\"),\n",
+    "                    b = Q_(0.0, \"V\"))\n",
     ")\n",
-    "welding_voltage_chain.add_signal_data(voltage_data)\n",
     "\n",
-    "#welding_voltage_chain = msm.MeasurementChain(\n",
-    "#    name=\"welding voltage measurement chain\",\n",
-    "#    data_source=src_voltage,\n",
-    "#    data_processors=[voltage_AD_transform, voltage_calib_transform],\n",
-    "#)\n",
+    "voltage_calib_transform = msm.SignalTransformation(\n",
+    "     name=\"Calibration voltage measurement\",\n",
+    "     error=msm.Error(0.0),\n",
+    "     func=voltage_calib_func,\n",
+    "     meta=twincat_scope,\n",
+    ")\n",
+    "\n",
+    "welding_voltage_chain.add_transformation(\n",
+    "    transformation=voltage_calib_transform,\n",
+    "    data=voltage_data,\n",
+    ")\n",
+    "\n",
     "\n",
     "welding_voltage = msm.Measurement(\n",
     "    name=\"welding voltage measurement\",\n",
@@ -537,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
