Try adding link

--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -94,9 +94,7 @@
    "source": [
     "## Equipment and Software\n",
     "Next, let's define some of the equipment and software that is used throughout the measurement chain. \n",
-    "\n",
-    ">We will use and add more information to these objects later.\n",
-    "\n",
+    "We will use and add more information to these objects later.\n",
     "In out example, two types of hardware equipment are used:\n",
     "\n",
     "- The [`HKS P1000-S3`](https://hks-prozesstechnik.de/en/sensors-2/) is a standard welding process sensor that detects the welding voltage and current using a hall sensor. The result is output as two analog signals scaled to +/- 10 V.\n",
@@ -135,7 +133,7 @@
     "Now we define the missing elements of our measurement chain and bundle everything together. A core concept of the chain are `signals` that go in and out of `transformations` which define mathematical operations of the signals, forming the chain.\n",
     "\n",
     "Each measurement chain starts with a source signal. This is the point where our physical process or quantity is initially detected by a sensor. Since every `MeasurementChain` needs at least a source, we need to provide the corresponding information when creating an instance of this class. \n",
-    "As shown in the tutorial about the `MeasurementChain`, there are several ways to do this.\n",
+    "As shown in the [tutorial about the `MeasurementChain`](measurement_chain.ipynb), there are several ways to do this.\n",
     "Because we have already defined our source equipment, we will add the `SignalSource` to the `MeasurementEquipment` and use it to create our `MeasurementChain`. \n",
     "The necessary parameters to create the `SignalSource` are its `name`, the `output_signal` and the `source_error` representing the uncertainty attached to the signal source. \n",
     "\n",
