--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -517,7 +517,8 @@
    "source": [
     "This concludes this tutorial about the `MeasurementChain` class.\n",
     "We have learned different methods to create it, add transformations and measurement data to it.\n",
-    "Additionally, we saw how to define our laboratory equipment using the `MeasurementEquipment` class and create new measurement chains from it."
+    "Additionally, we saw how to define our laboratory equipment using the `MeasurementEquipment` class and create new measurement chains from it. \n",
+    "An actual welding example that utilizes `MeasurementChain` can be found [here](measurement_example.ipynb)."
    ]
   }
  ],
@@ -537,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
