wip on tutorial

--- a/tutorials/weldxfile.ipynb
+++ b/tutorials/weldxfile.ipynb
@@ -52,9 +52,18 @@
     "Next we assign some dictionary like data to the file, by storing it some attribute name enclosed by square brackets.\n",
     "Then we look at the representation of the file header or contents. This will depend on the execution environment.\n",
     "In JupyterLab you will see an interactive tree like structure, which can be expanded and searched.\n",
-    "The root of the tree is denoted as \"root\" followed by children created by the ASDF library \"asdf_library\" and \"history\". We attached the additional child \"some_data\" with our assignment.\n",
-    "\n",
-    "Note, that here we are using some very common types, namely an NumPy array and a timestamp. For weldx specialized types like the coordinates system manager, (welding) measurements etc., the weldx package provides ASDF extensions to handle those types automatically during loading and saving ASDF data. You do not need to worry about them. If you try to save types, which cannot be handled by ASDF, you will trigger an error."
+    "The root of the tree is denoted as \"root\" followed by children created by the ASDF library \"asdf_library\" and \"history\". We attached the additional child \"some_data\" with our assignment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83c7b0dd-4647-49d1-9b46-e70414ed3b5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\"data_sets\": {\"first\": np.random.random(100),\n",
+    "                      \"time\": datetime.now()}}"
    ]
   },
   {
@@ -64,9 +73,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file[\"some_data\"] = {\"data_set\": {\"data\": np.random.random(100),\n",
-    "                                  \"time\": datetime.now()}}\n",
+    "file[\"some_data\"] = data\n",
     "file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa09e69a-0801-409a-869b-7f90ab9f65ee",
+   "metadata": {},
+   "source": [
+    "Note, that here we are using some very common types, namely an NumPy array and a timestamp. For weldx specialized types like the coordinates system manager, (welding) measurements etc., the weldx package provides ASDF extensions to handle those types automatically during loading and saving ASDF data. You do not need to worry about them. If you try to save types, which cannot be handled by ASDF, you will trigger an error."
    ]
   },
   {
@@ -84,8 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = WeldxFile(tree={\"data_sets\": {\"first\": np.random.random(100),\n",
-    "                                     \"time\": \"now\"}},\n",
+    "file = WeldxFile(tree=data,\n",
     "                 mode=\"rw\")\n",
     "file"
    ]
@@ -119,7 +134,6 @@
     "                                \"time\": datetime.now()}\n",
     "\n",
     "# delete the first data set again:\n",
-    "\n",
     "del file[\"data_sets\"][\"first\"]\n",
     "file"
    ]
@@ -231,13 +245,9 @@
     "# FIXME: this logic is broken!\n",
     "with WeldxFile(\"example.asdf\", mode='rw') as example:\n",
     "    example[\"updated\"] = True\n",
+    "    fh = example.file_handle\n",
     "    # now the context ends, and the file is being saved to disk again.\n",
-    "\n",
-    "# If you access the file now to obtain a key, you will trigger an error.\n",
-    "try:\n",
-    "    print(example[\"updated\"])\n",
-    "except Exception as e:\n",
-    "    print(e)"
+    "assert fh.closed"
    ]
   },
   {
@@ -263,7 +273,7 @@
    "id": "1a8745f8-0659-4bcd-950d-4480e5793545",
    "metadata": {},
    "source": [
-    "In case an error got triggered (e.g. an exception has been raised), the underlying file is.  "
+    "In case an error got triggered (e.g. an exception has been raised) inside the context, the underlying file is still updated. You could prevent this behavior, by passing `sync=False` during file construction.  "
    ]
   },
   {
@@ -273,9 +283,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with WeldxFile(\"example.asdf\", mode=\"rw\") as file:\n",
-    "    file[\"updated\"] = False\n",
-    "    raise Exception(\"oh no\")"
+    "try:\n",
+    "    with WeldxFile(\"example.asdf\", mode=\"rw\") as file:\n",
+    "        file[\"updated\"] = False\n",
+    "        raise Exception(\"oh no\")\n",
+    "except Exception as e:\n",
+    "    print(\"expected error:\", e)"
    ]
   },
   {
@@ -290,12 +303,92 @@
   },
   {
    "cell_type": "markdown",
+   "id": "08df0b31-52c9-402b-af17-6df0ec22df2b",
+   "metadata": {},
+   "source": [
+    "## Keeping a log of changes when manipulating a file\n",
+    "It can become quite handy to know what has been done to file in the past. Weldx files provide a history log, in which arbitrary strings can be stored with time stamps and used software. We quickly run you through the process of adding history entries to your file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8729068e-7ced-493d-9198-a7281773ee3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename_hist = \"example_history.asdf\"\n",
+    "with WeldxFile(filename_hist, mode=\"rw\") as file:\n",
+    "    file[\"some\"] = \"changes\"\n",
+    "    file.add_history_entry(\"added some changes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2466c51c-52ae-4d9b-8bae-ec89fb055ba4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WeldxFile(filename_hist)[\"history\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efa23de1-7a3e-4200-93e5-96f38974106b",
+   "metadata": {},
+   "source": [
+    "When you want to describe a custom software,\n",
+    "which is lets say a library or tool used to generate/modify the data in the file and we passed it into the creation of our WeldxFile."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "115e4f2d-07e6-4c99-89f9-4e21ba9344f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "software = dict(name=\"my_tool\", version=\"1.0\", homepage=\"https://my_tool.org\", author=\"the crowd\")\n",
+    "with WeldxFile(filename_hist, mode=\"rw\", software_history_entry=software) as file:\n",
+    "    file[\"some\"] = \"changes\"\n",
+    "    file.add_history_entry(\"added more changes\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32ac57b8-4e92-4af0-a7c1-1af5178fe9a2",
+   "metadata": {},
+   "source": [
+    "Lets now inspect how we wrote history."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8587f8a2-719e-4515-a792-c77f52ef1ec9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WeldxFile(filename_hist)[\"history\"][\"entries\"][-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "094246a4-de08-4865-9765-472e0bed32b9",
+   "metadata": {},
+   "source": [
+    "The entries key is a list of all log entries, where new entries are appended to. We have proper time stamps indicating when the change happened, the actual log entry, and optionally a custom software used to make the change."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a381e584-6f2e-4f6c-932f-4a870c30893b",
    "metadata": {},
    "source": [
     "## Handeling of custom schemas\n",
     "An important aspect of WeldX or ASDF files is, that you can validate them to comply with a defined schema. A schema defines required and optional attributes a tree structure has to provide to pass the schema validation. Further the types of these attributes can be defined, e.g. the data attribute should be a NumPy array, or a timestamp should be of type `pandas.Timestamp`.\n",
-    "There are several schemas provided by WeldX, which can be used by passing them to the `schema` argument. It is expected to be a path-like type, so a string (`str`) or `pathlib.Path` is accepted. The provided utility function `get_schema_path` returns the path to named schema. So its output can directly be used in WeldxFile(schema=...)"
+    "There are several schemas provided by WeldX, which can be used by passing them to the `custom_schema` argument. It is expected to be a path-like type, so a string (`str`) or `pathlib.Path` is accepted. The provided utility function `get_schema_path` returns the path to named schema. So its output can directly be used in WeldxFile(schema=...)"
    ]
   },
   {
@@ -332,7 +425,8 @@
     "  - measurements\n",
     "  - equipment\n",
     "\n",
-    "We use a testing function to provide this data now, and validate it against the schema."
+    "We use a testing function to provide this data now, and validate it against the schema by passing the `custom_schema` during WeldxFile creation.\n",
+    "Here we just have a look at the process parameters sub-dictionary."
    ]
   },
   {
@@ -346,7 +440,7 @@
    "source": [
     "from weldx.asdf.cli.welding_schema import single_pass_weld_example\n",
     "_, single_pass_weld_data = single_pass_weld_example(out_file=None)\n",
-    "display(single_pass_weld_data)"
+    "display(single_pass_weld_data[\"process\"])"
    ]
   },
   {
