--- a/tutorials/weldxfile.ipynb
+++ b/tutorials/weldxfile.ipynb
@@ -211,7 +211,8 @@
    "outputs": [],
    "source": [
     "example = WeldxFile(\"example.asdf\", mode='rw')\n",
-    "example"
+    "display(example)\n",
+    "example.close()"
    ]
   },
   {
@@ -230,9 +231,9 @@
    "source": [
     "## Handling updates within a context manager\n",
     "To ensure you will not forget to update your file after making changes, \n",
-    "we are able to enclose our file-chaning operations within a context manager.\n",
+    "we are able to enclose our file-changing operations within a context manager.\n",
     "This ensures that all operations done in this context (the `with` block) are being written to the file, once the context is left.\n",
-    "Note that the underlying file is also closed after the context ends. This is useful, when you have to update lots of files, as there is a limited amount of files an operating system can deal with."
+    "Note that the underlying file is also closed after the context ends. This is useful, when you have to update lots of files, as there is a limited amount of file handles an operating system can deal with."
    ]
   },
   {
@@ -242,11 +243,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FIXME: this logic is broken!\n",
     "with WeldxFile(\"example.asdf\", mode='rw') as example:\n",
     "    example[\"updated\"] = True\n",
     "    fh = example.file_handle\n",
     "    # now the context ends, and the file is being saved to disk again.\n",
+    "\n",
+    "# lets check the file handle has been closed, after the context ended.\n",
     "assert fh.closed"
    ]
   },
@@ -525,14 +527,6 @@
     "The ASDF library assignes tags to certain types to handle their storage in the file format. \n",
     "As shown, the \"signal\" tag is contained in \"weldx/measurement\" container, provided by \"weldx.bam.de\". The tags and schemas"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1baa4271-5c19-49b3-8f88-b42b13792acf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
